--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
     "gulp-concat": "^2.5.2",
+    "gulp-install": "^0.4.0",
     "gulp-jshint": "^1.9.2",
     "gulp-livereload": "^3.7.0",
     "gulp-minify-css": "^0.4.6",
