--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.1.0",
+    "jquery": "^2.1.4",
     "jshint-stylish": "^1.0.1",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
